// Copyright 2023-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.prototransform.v1alpha1;

// LeaseEntry represents the serialized form of a lease.
message LeaseEntry {
  // Description of the process that holds the lease.
  oneof holder {
    LeaseHolder computed = 1;
    bytes user_provided = 2;
  }
}

// LeaseHolder is a computed leaseholder ID for a
// client process. These attributes together should
// uniquely identify any process.
message LeaseHolder {
  string hostname = 1;
  bytes ip_address = 2;
  bytes mac_address = 3;
  uint64 pid = 4;
  uint64 start_nanos = 5;
}
